carousel not working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,15 +31,11 @@
 .text-primary {
   color: var(--primary) !important;
 }
-.carousel-item {
-  position: relative;
-  display: none;
-  float: left;
+
+#owl-carousel .item img {
+  display: block;
   width: 100%;
-  margin-right: -100%;
-  backface-visibility: hidden;
-  transition: transform 0.6s ease-in-out;
-  height: 80vh;
+  height: auto;
 }
 /* Bootstrap CSS Overriding End */
 
@@ -550,7 +546,7 @@ h6,
 @media (min-width: 991.98px) {
   .facts {
     position: relative;
-    margin-top: -75px;
+    margin-top: -50px;
     z-index: 1;
   }
 }
