--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ h6,
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: var(--primary);
+  color: var(--dark);
 }
 
 .navbar-dark .navbar-brand h1 {
@@ -204,6 +204,7 @@ h6,
   opacity: 0;
   transition: 0.3s;
   visibility: hidden;
+  margin-top: -23px;
 }
 .navbar-nav ul li a {
   margin-left: 0 !important;
@@ -263,6 +264,7 @@ h6,
     left: 50%;
     background: var(--primary);
     transition: 0.5s;
+    top: 80px;
   }
 
   .navbar-dark .navbar-nav .nav-link:hover::before,
